# TangramFS

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  job.sh
.github/workflows/: cmake.yml  install-deps.sh  make-build.yml
CMake/: tangramfs-config-version.cmake.in  tangramfs-config.cmake.build.in  tangramfs-config.cmake.install.in
examples/: CMakeLists.txt  example.c  fabric_rdm.c  iobench.c  iobench_direct.c  iops_bench.c  job.sh  test_passive.c  workflow.c
examples/ml-apps/: flickr8k_tangram.py  ml.py  run.sh
include/: commitfs.h  lock-token.h  seg_tree.h  sessionfs.h  tangramfs-delegator.h  tangramfs-global-interval-tree.h  tangramfs-interval-tree.h  tangramfs-lock-manager.h  tangramfs-meta.h  tangramfs-metadata-manager.h  tangramfs-metadata.h  tangramfs-posix-wrapper.h  tangramfs-rma-client.h  tangramfs-rma-server.h  tangramfs-rpc-client.h  tangramfs-rpc-server.h  tangramfs-rpc.h  tangramfs-semantics-impl.h  tangramfs-server-global.h  tangramfs-server-local.h  tangramfs-server.h  tangramfs-ucx-comm.h  tangramfs-ucx.h  tangramfs-utils.h  tangramfs.h
maint/: Version
src/: CMakeLists.txt  Makefile.am  Makefile.in  brickfs.c  job.sh  main  main.c  posix-wrappers.c  tangramfs-global-interval-tree.c  tangramfs-interval-tree.c  tangramfs-meta-client.c  tangramfs-meta-server.c  tangramfs-metadata.c  tangramfs-posix-wrapper.c  tangramfs-primitives.c  tangramfs-rpc-client.c  tangramfs-rpc-onetime.c  tangramfs-rpc-server.c  tangramfs-semantics-impl.c  tangramfs-utils.c  tangramfs.c
src/client/: Makefile.am  commitfs.c  main.c  sessionfs.c  tangramfs-delegator.c  tangramfs-interval-tree.c  tangramfs-posix-wrapper.c  tangramfs-rma-client.c  tangramfs-rma-server.c  tangramfs-rpc-client.c  tangramfs-rpc-onetime.c  tangramfs-rpc.c  tangramfs-semantics-impl.c  tangramfs.c
src/common/: lock-token.c  seg_tree.c  tangramfs-lock-manager.c  tangramfs-utils.c
src/server/: Makefile.am  server  tangramfs-delegator.c  tangramfs-global-interval-tree.c  tangramfs-lock-manager.c  tangramfs-metadata-manager.c  tangramfs-metadata.c  tangramfs-rpc-server.c  tangramfs-server-global.c  tangramfs-server-local.c  tangramfs-server.c
src/ucx/: README.md  tangramfs-ucx-client-ucp.c  tangramfs-ucx-client.c  tangramfs-ucx-client.h  tangramfs-ucx-comm.c  tangramfs-ucx-comm.h  tangramfs-ucx-delegator.c  tangramfs-ucx-delegator.h  tangramfs-ucx-rma-bak.c  tangramfs-ucx-rma-ucp.c  tangramfs-ucx-rma.c  tangramfs-ucx-rma.h  tangramfs-ucx-server-socket.c  tangramfs-ucx-server-ucp.c  tangramfs-ucx-server.c  tangramfs-ucx-server.h  tangramfs-ucx-taskmgr.c  tangramfs-ucx-taskmgr.h
test/: test_libfabric.c  test_passive.c
